k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-app
  labels:
    app: login-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-app
  template:
    metadata:
      labels:
        app: login-app
    spec:
      containers:
        - name: login-app
          image: image-registry.openshift-image-registry.svc:5000/default/login-app:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
