k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: login-app
  name: login-app
spec:
  to:
    kind: Service
    name: login-app-service
  port:
    targetPort: 80
  tls:
    termination: edge
  wildcardPolicy: None
